--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,8 +3,8 @@
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
   "default_locale": "en",
-  "version": "1.14.7",
-  "author": "dev@conceptualspace.net",
+  "version": "1.0.1",
+  "author": "seraf@cyb3r.ca",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
@@ -45,7 +45,7 @@
   "web_accessible_resources": ["icons/icon128.png"],
   "browser_specific_settings": {
     "gecko": {
-      "id": "yet_another_speed_dial@conceptualspace.net",
+      "id": "simple_speed_dial@cyb3r.ca",
       "strict_min_version": "59.0"
     }
   }
